# simpleAddExe2reg

./: CMakeLists.txt  README.md  main.cpp  resources.rc
